redesigne profile update , fixed dropdown icon not showing , fixed post like replylike comment like follow api now working

--- a/src/screens/css/BrowseImage.css
+++ b/src/screens/css/BrowseImage.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid rgb(224,224,224);
-  border-radius: 40px;
+  border-radius: 20px;
 }
 
 .browse-suggestion {
